// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Build Process ensures "use client" directive appears at the top of the file 1`] = `
""use client";
// packages/bunup/test/.project/src/component.tsx
import { useState } from "react";
import { jsxDEV } from "react/jsx-dev-runtime";

function Counter() {
  const [count, setCount] = useState(0);
  return /* @__PURE__ */ jsxDEV("button", {
    onClick: () => setCount(count + 1),
    children: [
      "Count: ",
      count
    ]
  }, undefined, true, undefined, this);
}
export {
  Counter
};
"
`;

exports[`Build Process includes banner/footer 1`] = `
"// Banner
// packages/bunup/test/.project/src/index.ts
var x = 1;
export {
  x
};

// Footer
"
`;

exports[`Build Process respects external 1`] = `
"// packages/bunup/test/.project/src/index.ts
import"chalk";
"
`;

exports[`Build Process should treat dependencies as external by default 1`] = `
"// packages/bunup/test/.project/src/index.ts
import chalk from "chalk";
console.log(chalk.red("Hello, world!"));
"
`;

exports[`Build Process should treat peerDependencies as external by default 1`] = `
"// packages/bunup/test/.project/src/index.tsx
import ora from "ora";
var spinner = ora("Loading...").start();
setTimeout(() => {
  spinner.succeed("Done!");
}, 1000);
"
`;

exports[`Build Process should not treat devDependencies as external by default 1`] = `
"import { createRequire } from "node:module";
var __create = Object.create;
var __getProtoOf = Object.getPrototypeOf;
var __defProp = Object.defineProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __toESM = (mod, isNodeMode, target) => {
  target = mod != null ? __create(__getProtoOf(mod)) : {};
  const to = isNodeMode || !mod || !mod.__esModule ? __defProp(target, "default", { value: mod, enumerable: true }) : target;
  for (let key of __getOwnPropNames(mod))
    if (!__hasOwnProp.call(to, key))
      __defProp(to, key, {
        get: () => mod[key],
        enumerable: true
      });
  return to;
};
var __commonJS = (cb, mod) => () => (mod || cb((mod = { exports: {} }).exports, mod), mod.exports);

// node_modules/picocolors/picocolors.js
var require_picocolors = __commonJS((exports, module) => {
  var p = process || {};
  var argv = p.argv || [];
  var env = p.env || {};
  var isColorSupported = !(!!env.NO_COLOR || a"
`;

exports[`Build Process should bundle dependencies specified in noExternal option 1`] = `
"import { createRequire } from "node:module";
var __create = Object.create;
var __getProtoOf = Object.getPrototypeOf;
var __defProp = Object.defineProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __toESM = (mod, isNodeMode, target) => {
  target = mod != null ? __create(__getProtoOf(mod)) : {};
  const to = isNodeMode || !mod || !mod.__esModule ? __defProp(target, "default", { value: mod, enumerable: true }) : target;
  for (let key of __getOwnPropNames(mod))
    if (!__hasOwnProp.call(to, key))
      __defProp(to, key, {
        get: () => mod[key],
        enumerable: true
      });
  return to;
};
var __commonJS = (cb, mod) => () => (mod || cb((mod = { exports: {} }).exports, mod), mod.exports);

// node_modules/cli-spinners/spinners.json
var require_spinners = __commonJS((exports, module) => {
  module.exports = {
    dots: {
      interval: 80,
      frames: [
        "⠋",
        "⠙",
        "⠹",
        "⠸",
  "
`;

exports[`Build Process should consider sub-modules as external when parent module is in external option 1`] = `
"// packages/bunup/test/.project/src/index.ts
import lodashArray from "lodash/array";
import lodashObject from "lodash/object";
import chalk from "chalk";
console.log(chalk.red("Hello, world!"));
ora("Loading...").start();
lodashArray.join(["Hello", "World"], " ");
lodashObject.join(["Hello", "World"], " ");
"
`;

exports[`Build Process should handle regex external patterns, only matching hyphenated packages 1`] = `
"// node_modules/kleur/index.mjs
var FORCE_COLOR;
var NODE_DISABLE_COLORS;
var NO_COLOR;
var TERM;
var isTTY = true;
if (typeof process !== "undefined") {
  ({ FORCE_COLOR, NODE_DISABLE_COLORS, NO_COLOR, TERM } = process.env || {});
  isTTY = process.stdout && process.stdout.isTTY;
}
var $ = {
  enabled: !NODE_DISABLE_COLORS && NO_COLOR == null && TERM !== "dumb" && (FORCE_COLOR != null && FORCE_COLOR !== "0" || isTTY),
  reset: init(0, 0),
  bold: init(1, 22),
  dim: init(2, 22),
  italic: init(3, 23),
  underline: init(4, 24),
  inverse: init(7, 27),
  hidden: init(8, 28),
  strikethrough: init(9, 29),
  black: init(30, 39),
  red: init(31, 39),
  green: init(32, 39),
  yellow: init(33, 39),
  blue: init(34, 39),
  magenta: init(35, 39),
  cyan: init(36, 39),
  white: init(37, 39),
  gray: init(90, 39),
  grey: init(90, 39),
  bgBlack: init(40, 49),
  bgRed: init(41, 49),
  bgGreen: init(42, 49),
  bgYellow: init(43, 49),
  bgBlue: init(44, 49),
  bgMagenta: init(45, 49),
  bgCyan: in"
`;

exports[`Build Process should handle regex noExternal patterns, only matching hyphenated packages 1`] = `
"import { createRequire } from "node:module";
var __create = Object.create;
var __descs = Object.getOwnPropertyDescriptors;
var __getProtoOf = Object.getPrototypeOf;
var __defProp = Object.defineProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __reExport = (target, mod, secondTarget) => {
  for (let key of __getOwnPropNames(mod))
    if (!__hasOwnProp.call(target, key) && key !== "default")
      __defProp(target, key, {
        get: () => mod[key],
        enumerable: true
      });
  if (secondTarget) {
    for (let key of __getOwnPropNames(mod))
      if (!__hasOwnProp.call(secondTarget, key) && key !== "default")
        __defProp(secondTarget, key, {
          get: () => mod[key],
          enumerable: true
        });
    return secondTarget;
  }
};
var __toESM = (mod, isNodeMode, target) => {
  target = mod != null ? __create(__getProtoOf(mod)) : {};
  cons"
`;
